// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`global mutliple 1`] = `
Program {
  "children": [
    Global {
      "items": [
        Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
      ],
      "kind": "global",
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`global simple 1`] = `
Program {
  "children": [
    Global {
      "items": [
        Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
      ],
      "kind": "global",
    },
  ],
  "errors": [],
  "kind": "program",
}
`;
